[tool.poetry]
name = "TDT4240"
version = "0.1.0"
description = ""
authors = ["sindrelothe <sindrl@online.no>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
numpy = "^1.22.3"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
